--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGO_URI=mongodb+srv://teamw:teamw123123@cluster0.88jxw31.mongodb.net/?retryWrites=true&w=majority
+CLOUDINARY_CLOUD_NAME = dezmj58v2
+CLOUDINARY_API_KEY = 595989961953332
+CLOUDINARY_API_SECRET = 9ssCIEudPY1rdyWuFzpXxB45tgQ
